--- a/templates/core/partials/steps/step_confirmation.html
+++ b/templates/core/partials/steps/step_confirmation.html
@@ -36,8 +36,7 @@
         <div class="col-lg-12"> 
             <input type="hidden" name="type" value="1" class="trade-type">
             <input type="hidden" name="payment-option" value="" class="payment-option">
-            <input type="hidden" name="payment-preference" value="" class="payment-preference">
-            <input type="hidden" name="payment-preference-identifier" value="" class="payment-preference-identifier">
+            <input type="hidden" name="payment-preference" value="" class="payment-preference-actual">            <input type="hidden" name="payment-preference-identifier" value="" class="payment-preference-identifier">
             <input type="hidden" name="payment-preference-owner" value="" class="payment-preference-owner">
             <button  class="sell-go btn btn-danger btn-lg place-order hidden">{% trans "Sell" %}</button>
             <button  class="buy-go btn btn-success btn-lg place-order ">{% trans "Buy" %}</button>
