--- a/templates/core/partials/supported_payments.html
+++ b/templates/core/partials/supported_payments.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load i18n %}
 <div class="supported-payments col-lg-12 col-md-12 col-sm-12 col-xs-12 greypanel">
-    <div class="supporetd_payment hidden">
+    <div class="supporetd_payment">
     {% with "WebMoney.ru AlfaBank.ru Sberbank.ru Qiwi.ru VTB24.ru Skrill.com" as banks_name %}
         {%  for idx in banks_name.split %}
         <div class="footerpay col-xs-4 col-sm-2">
