--- a/templates/core/user_login.html
+++ b/templates/core/user_login.html
@@ -18,7 +18,8 @@
   <input type="submit" name="submit" class="btn btn-success btn-lg" id="submit" value="{% trans "Login" %}">
   <input type="hidden" name="next" value="{{ next }}" />
 </form>
-
-<p>{% trans "Don't have an account?" %} <a class="nav-link" href="{% url 'core.user_registration' %}">{% trans "Register here" %}</a></p>
-<p>{% trans "Forgot your password?" %} <a class="nav-link" href="{% url 'accounts.password_reset' %}">{% trans "Reset it here" %}</a></p>
+<div class="p-list">
+    <p>{% trans "Don't have an account?" %} <a class="nav-link" href="{% url 'core.user_registration' %}">{% trans "Register here" %}</a></p>
+    <p>{% trans "Forgot your password?" %} <a class="nav-link" href="{% url 'accounts.password_reset' %}">{% trans "Reset it here" %}</a></p>
+</div>
 {% endblock %}
