--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -89,6 +89,7 @@
         {% block footer %}
         {% endblock %}
  </div>
+   {% include 'core/partials/supported_payments.html' %}
     {% include 'core/partials/popular_faq.html' %}
     {% include 'core/partials/seo_footer.html' %}
    
