--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -6,8 +6,20 @@
 	font-style: normal;
 }
 
-.modal-body{
+.modal-header {
+    border-bottom: 0;
+}
+
+#UserAccountModal .modal-body,
+#PayMethModal .modal-body{
     padding-left: 0;
+}
+
+#UserAccountModal .modal-footer,
+#PayMethModal .modal-footer{
+    margin: 0 25px;
+    padding-right: 0;
+    border-color: black;
 }
 
 .cms_text{
@@ -210,6 +222,9 @@
      background-color: rgb(217,149,148);
 }
 
+.step-confirm.panel {
+    margin-bottom: 0;
+}
 
 .hide-body{
 
@@ -524,7 +539,7 @@ body .price_box_ticker .trigger-sell, body .price_box_next_cont .sell-go{
 
 .price_box_next:hover{background-color:#000; color:#FFF;}
 
-.greypanel{background-color:#f4f5f5; padding:30px 0; margin-top: 20px;}
+.greypanel{background-color:#f4f5f5; padding:30px 0; margin-top: 40px;}
 
 .greypanel img{width:100%; padding:10px 5px;}
 
