--- a/templates/core/partials/modals/success_order.html
+++ b/templates/core/partials/modals/success_order.html
@@ -7,7 +7,7 @@
           {% if order.payment_preference.payment_method.name != 'Robokassa' %}
             <button type="button" class="close" data-dismiss="modal">×</button>
           {% endif %}
-          <h4 class="modal-title">{% trans 'Success' %}!</h4>
+          <h4 class="modal-title">{% trans 'Complete payment & get bitcoins now' %}!</h4>
         </div>
         <div class="modal-body successOrder">
             {% block modal_content %}
