--- a/templates/core/partials/payment_options.html
+++ b/templates/core/partials/payment_options.html
@@ -13,6 +13,8 @@
 {% endif %}
 
 <div class="row {{ type }} row_type">
+   
+{% comment %}
 
     <div class="payment_title">
         {% trans 'Wallets' %}
@@ -36,4 +38,11 @@
         {% include 'core/partials/modals/card.html' with card_type='Card 2 Card' label='Card 2 Card' icon='icons/small/c2c.ico' %}
     {% endif %}
     {% include 'core/partials/modals/card.html' with card_type='Cash' label='Cash' icon='icons/small/cash.png' card=cards.alfa %}
+    
+{% endcomment %}
+
+    
+        <h3>{% trans 'This section is under development' %}</h3>
+    
+    
 </div>
