Revert "delete sell payment"
This reverts commit 517b002a36b5216afb1df6101c8653bac0271588.

--- a/templates/core/partials/payment_options.html
+++ b/templates/core/partials/payment_options.html
@@ -10,9 +10,11 @@
     {% include 'core/partials/modals/card.html' with card_type='PayPal' label='Mastercard' icon='icons/small/mastercard.png' card=cards.paypal %}
 
 </div>
-
+{% endif %}
 
 <div class="row {{ type }} row_type">
+   
+{% comment %}
 
     <div class="payment_title">
         {% trans 'Wallets' %}
@@ -36,8 +38,11 @@
         {% include 'core/partials/modals/card.html' with card_type='Card 2 Card' label='Card 2 Card' icon='icons/small/c2c.ico' %}
     {% endif %}
     {% include 'core/partials/modals/card.html' with card_type='Cash' label='Cash' icon='icons/small/cash.png' card=cards.alfa %}
-   
-</div>
-{% elif type == 'sell' %}    
+    
+{% endcomment %}
+
+    
         <h3>{% trans 'This section is under development' %}</h3>
-{% endif %}
+    
+    
+</div>
