--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -1016,3 +1016,18 @@ body #nprogress .spinner-icon {
   border-top-color: #97CB53;
   border-left-color: #97CB53;
 }
+
+.box_wrapper {
+    background: white none repeat scroll 0 0;
+    border: 4px solid #eaeaea;
+    box-sizing: border-box;
+    margin: 33px auto;
+    max-width: 1250px;
+    height:500px;
+    overflow: hidden;
+    width: 90%;
+}
+.center_block{
+    display: table;
+    margin: 0 auto;
+}
