--- a/templates/core/partials/modals/order_success_braintree.html
+++ b/templates/core/partials/modals/order_success_braintree.html
@@ -3,22 +3,6 @@
 {% load tz %}
 
 {% block modal_content %}
-<style>
-    .box_wrapper {
-        background: white none repeat scroll 0 0;
-        border: 4px solid #eaeaea;
-        box-sizing: border-box;
-        margin: 33px auto;
-        max-width: 1250px;
-        height:500px;
-        overflow: hidden;
-        width: 90%;
-    }
-    .center_block{
-        display: table;
-        margin: 0 auto;
-    }
-</style>
 <div class="panel panel-success">
     <div class="panel-body">
         <h1>{% trans 'Order placed successfully' %}</h1>
@@ -52,7 +36,7 @@
                 <input id="payment_method_nonce" type="hidden" name="payment_method_nonce" value="" class="payment_method_nonce" >
                 <input id="paypalemail" type="hidden" name="paypalemail" value="" class="paypalemail" >
                 <input id="paytype" type="hidden" name="paytype" value="" class="paytype" >
-
+                <input type="hidden" value="{{ clienttoken  }}" id="client-token">
                 <div class="container-fluid">
                     <div class="table-responsive" id="dropin-container"></div>
                     <br/>
@@ -69,93 +53,4 @@
 
     </div><!-- /pannel-body -->
 </div><!-- /pannel -->
-
-<script>
-    $(document).ready(function() {
-        var clienttoken = '{{ clienttoken  }} ';
-        braintree.setup(clienttoken,
-                        "dropin",
-                        { container: "dropin-container",
-                          onReady: function (integration) {checkoutBraintree = integration;
-                                $('#dropin-container-wait').addClass('hide');
-                                $('#send-payment-button').removeClass('hidden')
-                          },
-                          onError: function (obj) {
-                            console.log('Error', obj);
-                            if (obj.type == 'VALIDATION') {
-                                // Validation errors contain an array of error field objects:
-                                console.log('VALIDATION', obj);
-                                obj.details.invalidFields;
-                            } else if (obj.type == 'SERVER') {
-                                // If the customer's browser cannot connect to Braintree:
-                                console.log('SERVER', obj);
-                                obj.message; // "Connection error"
-                                // If the credit card failed verification:
-                                obj.message; // "Credit card is invalid"
-                                obj.details; // Object with error-specific information
-                            }
-                          },
-                          onPaymentMethodReceived: function(obj) {
-                              var nonce = obj['nonce'];
-                              var formValid = true;
-                              if (! nonce) {
-                                  formValid = false;
-                              }
-
-                              if (formValid) {
-                                  $('#payment_method_nonce').val(nonce);
-                                  if (obj['type'] == 'PayPalAccount'){
-                                      $('#paypalemail').val(obj['details']['email']);
-                                      $('#paytype').val('PayPalAccount');
-                                  }
-                                  else{
-                                      $('#paytype').val('CreditCard');
-                                  }
-                                  console.log('SEND FORM', obj, nonce);
-
-                                  url = '{% url 'core.braintree_order' %}?oid={{ order.pk }}';
-
-                                  var formData = {
-                                      'payment_method_nonce': $('#payment_method_nonce').val(),
-                                      'order_id': $('#order_id').val(),
-                                      'order_amount': $('#order_amount').val(),
-                                      'order_unique_ref': $('#order_unique_ref').val(),
-                                      'method': 'SendFastPayment'
-                                  };
-                                  $.ajaxSetup({ beforeSend: function(xhr, settings) {
-                                      xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}"); }
-                                  });
-                                  $.ajax({
-                                      url:url,
-                                      async: false,
-                                      type:'POST',
-                                      data:JSON.stringify(formData),
-                                      contentType: "application/json; charset=utf-8",
-                                      success: function(res) {
-                                          if (res['error'] == 1){
-                                              console.log("RES:", res['error_text']);
-                                              var error_text = res['error_text'];
-                                              toastr.error(error_text);
-                                          }
-                                          else{
-                                              window.location.replace("{% url 'core.order' %}?id={{ order.unique_reference }}");
-                                          }
-                                      },
-                                      error:  function(res) {
-                                          console.log("RES:", res);
-                                      }
-                                  }).done(function(data) {
-                                      $('#send-payment-button').button('reset');
-                                      $('#send-payment-button').toggleClass('disabled');
-                                  });
-                              }
-                              else{
-                                  console.log('Form error');
-                              }
-                              return false;
-                          }
-                        });
-    });
-
-</script>
 {% endblock %}
