add Beta to title, enhance notifications for released transactions

--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -27,7 +27,7 @@
           ga('send', 'pageview');
     </script>
     <meta charset="utf-8">
-    <title>{% trans 'Nexchange' %}</title>
+    <title>{% trans 'Nexchange BETA' %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
