--- a/templates/core/partials/seo_footer.html
+++ b/templates/core/partials/seo_footer.html
@@ -17,20 +17,20 @@
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
         	<h4>{% trans 'ABOUT' %} </h4>
-            <a href="/{{ lang }}/cms/about_us">{% trans 'About Us' %}</a>
-            <a href="/{{ lang }}/cms/careers">{% trans 'Careers' %}</a>
-            <a href="/{{ lang }}/cms/press">{% trans 'Press' %}</a>
-            <a href="/{{ lang }}/cms/conference">{% trans 'Conference' %}</a>
-            <a href="/{{ lang }}/cms/legal_privacy">{% trans 'Legal & Privacy' %}</a>
-            <a href="/{{ lang }}/cms/security">{% trans  'Security' %}</a>
+            <a href="/{{ lang }}/articless/about_us">{% trans 'About Us' %}</a>
+            <a href="/{{ lang }}/articles/careers">{% trans 'Careers' %}</a>
+            <a href="/{{ lang }}/articles/press">{% trans 'Press' %}</a>
+            <a href="/{{ lang }}/articles/conference">{% trans 'Conference' %}</a>
+            <a href="/{{ lang }}/articles/legal_privacy">{% trans 'Legal & Privacy' %}</a>
+            <a href="/{{ lang }}/articles/security">{% trans  'Security' %}</a>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
         	<h4>{% trans 'RESOURCES' %} </h4>
-            <a href="/{{ lang }}/cms/faq">{% trans 'FAQ' %}</a>
-            <a href="/{{ lang }}/cms/blog">{% trans 'Blog' %}</a>
-            <a href="/{{ lang }}/cms/fees">{% trans 'Fees' %}</a>
-            <a href="/{{ lang }}/cms/support">{% trans 'Support' %}</a>
-            <a href="/{{ lang }}/cms/trading_guide">{% trans 'Trading Guide' %}</a>
+            <a href="/{{ lang }}/articles/faq">{% trans 'FAQ' %}</a>
+            <a href="/{{ lang }}/articles/blog">{% trans 'Blog' %}</a>
+            <a href="/{{ lang }}/articles/fees">{% trans 'Fees' %}</a>
+            <a href="/{{ lang }}/articles/support">{% trans 'Support' %}</a>
+            <a href="/{{ lang }}/articles/trading_guide">{% trans 'Trading Guide' %}</a>
         </div>
     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
    	  <h4>{% trans 'Social' %}</h4>
