Trivial template typo fix && git push

--- a/templates/core/partials/seo_footer.html
+++ b/templates/core/partials/seo_footer.html
@@ -17,7 +17,7 @@
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
         	<h4>{% trans 'ABOUT' %} </h4>
-            <a href="/{{ lang }}/articless/about_us">{% trans 'About Us' %}</a>
+            <a href="/{{ lang }}/articles/about_us">{% trans 'About Us' %}</a>
             <a href="/{{ lang }}/articles/careers">{% trans 'Careers' %}</a>
             <a href="/{{ lang }}/articles/press">{% trans 'Press' %}</a>
             <a href="/{{ lang }}/articles/conference">{% trans 'Conference' %}</a>
