--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -1039,7 +1039,12 @@ body #nprogress .spinner-icon {
     display: table;
     margin: 0 auto;
 }
-.cms_header{
+.cms_header, .page-header{
     display: inline-block;
     font-size: 32px;
+    border:0;
+}
+
+.register .controls {
+    margin-bottom: 15px;
 }
