--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -848,7 +848,8 @@ html body .modal-content {
     box-shadow: 0;
 }
 
-.supporetd_payment img, .payment-type-trigger{
+.supporetd_payment img, .payment-type-trigger,
+.og-resource {
     max-width: 100%;
     height: auto;
     padding: 20px 0;
@@ -865,7 +866,10 @@ html body .modal-content {
 
 .supporetd_payment img:hover,
 .payment-type-trigger:hover,
-.payment-type-trigger:hover .round-button  {
+.payment-type-trigger:hover .round-button,
+.og-resource:hover {
+    color: #8cc63f;
+    /*#71a131*/
     filter: grayscale(0);
     opacity: 1;
     -webkit-transition: opacity .7s linear,-webkit-filter .7s linear;
@@ -880,6 +884,7 @@ html body .modal-content {
    transition: opacity .7s linear,filter .7s linear;
    transition: opacity .7s linear,filter .7s linear,-webkit-filter .7s linear;
 }
+
 
 .round-button {
     width: 20px;
@@ -1047,4 +1052,56 @@ body #nprogress .spinner-icon {
 
 .register .controls {
     margin-bottom: 15px;
+}
+
+.og-resource {
+    margin: 15px 0;
+    padding: 0;
+    border: thin solid #f4f5f5;
+    background-color: #fff;
+    display: inline-block;
+    position: relative;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all 0.7s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.og-resource::after {
+  content: "";
+  border-radius: 5px;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.7s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.og-resource:hover {
+  -webkit-transform: scale(1.03, 1.03);
+  transform: scale(1.03, 1.03);
+}
+
+.og-resource:hover::after {
+    opacity: 1;
+}
+
+
+.og-resource .content-container {
+    margin-top: 25px;
+}
+
+.og-resource .preview {
+    background-size: cover;
+    border-right: thin solid #f4f5f5;
+}
+
+.og-resource .og-content {
+    vertical-align: middle;
+    margin-top: 25px;
 }
