revert cms page to non-time-stamped version because of migration problems

--- a/templates/articles/cms_default.html
+++ b/templates/articles/cms_default.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="cms_body">
-                {{ paage.body | safe }}
+                {{ page.body | safe }}
             </div>
         {% endblock %}
 
