--- a/templates/core/partials/seo_footer.html
+++ b/templates/core/partials/seo_footer.html
@@ -29,7 +29,7 @@
             <a href="/{{ lang }}/articles/faq">{% trans 'FAQ' %}</a>
             <a href="/{{ lang }}/articles/blog">{% trans 'Blog' %}</a>
             <a href="/{{ lang }}/articles/fees">{% trans 'Fees' %}</a>
-            <a href="/{{ lang }}/articles/support">{% trans 'Support' %}</a>
+            <a href="/{{ lang }}/support">{% trans 'Support' %}</a>
             <a href="/{{ lang }}/articles/trading_guide">{% trans 'Trading Guide' %}</a>
         </div>
     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
