--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -1048,6 +1048,7 @@ body #nprogress .spinner-icon {
     display: inline-block;
     font-size: 32px;
     border:0;
+    width: 100%;
 }
 
 .register .controls {
