--- a/templates/support/support.html
+++ b/templates/support/support.html
@@ -20,6 +20,10 @@
             {% endfor %}
         </ul>
     </div>
+    <div class="cms_header">
+        <div class="line-order" >
+        </div>
+    </div>
 <div class="row support-wrapper">
     <div class="col-xs-5 form-support">
         <div class="page-header">
