--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -1154,5 +1154,16 @@ body #nprogress .spinner-icon {
 .answer {
 	text-align: center;
 	padding-top: 50px;
+	padding-bottom: 100px;
 	font-size: 18px;
+}
+
+.answer-support {
+	width: 47.5%;
+}
+
+.answer-support-middle {
+	width: 5%;
+	font-size: 25px;
+	margin-bottom: 10px;
 }
