--- a/templates/support/thanks.html
+++ b/templates/support/thanks.html
@@ -5,7 +5,21 @@
 {% block main %}
     <div class="row">
         <div class="col col-lg-12 answer">
-            <p>{% trans "Thanks, soon we will answer you" %}</p>
+            <p>{% trans "Thank you, our support representative will be in touch with you within 24 hours" %}</p>
         </div>        
+    </div>
+    
+    <div class="col-xs-12">
+        <div class="row">
+            <div class="col-xs-5 price_box price_box_ticker answer-support">
+                <a href="/" class="trigger trigger-buy active-action">{% trans "Buy" %}</a>
+            </div>
+            <div class="col-xs-5 price_box price_box_ticker answer-support-middle">
+                {% trans "OR" %}
+            </div>
+            <div class="col-xs-5 price_box price_box_ticker answer-support">
+                <a href="/support" class="ptrigger trigger-buy active-action">{% trans "Back" %}</a>
+            </div>
+        </div>
     </div>
 {% endblock %}
